--- a/WebResumen/Views/Shared/_Layout.cshtml
+++ b/WebResumen/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                <a class="navbar-brand" asp-area="" asp-controller="Homet" asp-action="Index">
                     <img src="~/img/Baxter.png" width="150" height="30" class="d-inline-block align-top" alt="">
                 </a>
 
@@ -50,10 +50,21 @@
 
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
+
+                        @using Microsoft.AspNetCore.Http
+                        @inject IHttpContextAccessor httpContextAccessor
+                        @if (string.IsNullOrEmpty(@httpContextAccessor.HttpContext.Session.GetString("SessionName")))
+                        {
+                            Context.Response.Redirect("/Home");
+                        }
+                        else
+                        {
+
                         @using Microsoft.AspNetCore.Authorization
                         @inject IAuthorizationService AuthorizationService
                         @if ((await AuthorizationService.AuthorizeAsync(User, "ADUsers")).Succeeded)
                         {
+
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
                             </li>
@@ -61,18 +72,15 @@
 
 
                         @*<li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                            </li>*@
+         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        </li>*@
                         else
                         {
                             @if ((await AuthorizationService.AuthorizeAsync(User, "ADAS")).Succeeded)
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Homet" asp-action="Index">Inicio</a>
                                 </li>
-
-
-
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="CiclosAutoClaveAgua" asp-action="Index">DatosExplotacionAgua</a>
                                 </li>
@@ -86,6 +94,7 @@
 
                                 @if ((await AuthorizationService.AuthorizeAsync(User, "ADAdmins")).Succeeded)
                                 {
+
                                     <li class="nav-item">
                                         <a class="nav-link text-dark" asp-area="" asp-controller="MaestroAutoclave" asp-action="Index">Control Maestro</a>
                                     </li>
@@ -97,33 +106,25 @@
                                 }
                             }
                         }
-
-                        @*<li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="AutoClaveA" asp-action="Index">AutoClaveA</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="AutoClaveJJ" asp-action="Index">AutoClaveJ</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="AutoClaveK" asp-action="Index">AutoClaveK</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="AutoClaveL" asp-action="Index">AutoClaveL</a>
-                            </li>*@
+                        }
 
                     </ul>
                 </div>
             </div>
 
+
             <ul class="navbar-nav ml-auto">
-
                 <li class="nav-item">
-                    <p class="float-right navbar-text navbar-right text-danger">Hola, <strong>@User.Identity.Name.Replace("GLOBAL\\", "")!</strong> </p>
-
-
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
+                </li>
+                <li class="nav-item">
+                    @*<p class="float-right navbar-text navbar-right text-danger">Hola, <strong>@User.Identity.Name.Replace("GLOBAL\\", "")!</strong> </p>*@
+                                     
+                    @using Microsoft.AspNetCore.Http
+                    @inject IHttpContextAccessor httpContextAccessor
+                    <p class=" navbar-text text-danger">Hola, <strong> @httpContextAccessor.HttpContext.Session.GetString("SessionName")!</strong> </p>
                 </li>
             </ul>
-
         </nav>
 
 
