--- a/WebResumen/Views/Home/Index.cshtml
+++ b/WebResumen/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
     <div class="row">
         <div class="col-md-6">
             <form method="post">
-                <div asp-validation-summary="All" class="text-danger"></div>
+                @*<div asp-validation-summary="All" class="text-danger"></div>*@
                 <div class="form-group">
                     <label asp-for="Usuario"></label>
                     <input asp-for="Usuario" class="form-control" />
