--- a/WebResumen/Views/Shared/_Layout.cshtml
+++ b/WebResumen/Views/Shared/_Layout.cshtml
@@ -60,53 +60,56 @@
                         else
                         {
 
-                        @using Microsoft.AspNetCore.Authorization
-                        @inject IAuthorizationService AuthorizationService
-                        @if ((await AuthorizationService.AuthorizeAsync(User, "ADUsers")).Succeeded)
-                        {
-
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
-                            </li>
-                        }
-
-
-                        @*<li class="nav-item">
-         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </li>*@
-                        else
-                        {
-
-                            @if ((await AuthorizationService.AuthorizeAsync(User, "ADAS")).Succeeded)
+                            @using Microsoft.AspNetCore.Authorization
+                            @inject IAuthorizationService AuthorizationService
+                            @if ((await AuthorizationService.AuthorizeAsync(User, "ADUsers")).Succeeded)
                             {
+
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Inicio" asp-action="Index">Inicio</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="CiclosAutoClaveAgua" asp-action="Index">DatosExplotacionAgua</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="CiclosAutoClaveVapor" asp-action="Index">DatosExplotacionVapor</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="MaestroAutoclaveSup" asp-action="Index">Control Estado</a>
-                                </li>
+                            }
 
 
-                                @if ((await AuthorizationService.AuthorizeAsync(User, "ADAdmins")).Succeeded)
+                            @*<li class="nav-item">
+             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            </li>*@
+                            else
+                            {
+
+                                @if ((await AuthorizationService.AuthorizeAsync(User, "ADAS")).Succeeded)
                                 {
-
                                     <li class="nav-item">
-                                        <a class="nav-link text-dark" asp-area="" asp-controller="MaestroAutoclave" asp-action="Index">Control Maestro</a>
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Inicio" asp-action="Index">Inicio</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link text-dark" asp-area="" asp-controller="Parametro" asp-action="Index">Configuración</a>
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="CiclosAutoClaveAgua" asp-action="Index">DatosExplotacionAgua</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="CiclosAutoClaveVapor" asp-action="Index">DatosExplotacionVapor</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="MaestroAutoclaveSup" asp-action="Index">Control Estado</a>
                                     </li>
 
 
+                                    @if ((await AuthorizationService.AuthorizeAsync(User, "ADAdmins")).Succeeded)
+                                    {
+
+                                        <li class="nav-item">
+                                            <a class="nav-link text-dark" asp-area="" asp-controller="MaestroAutoclave" asp-action="Index">Control Maestro</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link text-dark" asp-area="" asp-controller="Parametro" asp-action="Index">Configuración</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link text-dark" asp-area="" asp-controller="AudiTrail" asp-action="Index">AudiTrail</a>
+                                        </li>
+
+
+                                    }
                                 }
                             }
-                        }
                         }
 
                     </ul>
