Se agregan nuevos campos al auditTrail y nombre de usuario a la hoja de impresión

--- a/WebResumen/Views/AudiTrail/Edit.cshtml
+++ b/WebResumen/Views/AudiTrail/Edit.cshtml
@@ -19,6 +19,11 @@
                 <span asp-validation-for="Usuario" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Tabla" class="control-label"></label>
+                <input asp-for="Tabla" class="form-control" />
+                <span asp-validation-for="Tabla" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="FechaHora" class="control-label"></label>
                 <input asp-for="FechaHora" class="form-control" />
                 <span asp-validation-for="FechaHora" class="text-danger"></span>
@@ -27,6 +32,11 @@
                 <label asp-for="Evento" class="control-label"></label>
                 <input asp-for="Evento" class="form-control" />
                 <span asp-validation-for="Evento" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Campo" class="control-label"></label>
+                <input asp-for="Campo" class="form-control" />
+                <span asp-validation-for="Campo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Valor" class="control-label"></label>
@@ -42,6 +52,11 @@
                 <label asp-for="Comentario" class="control-label"></label>
                 <input asp-for="Comentario" class="form-control" />
                 <span asp-validation-for="Comentario" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Tiempo" class="control-label"></label>
+                <input asp-for="Tiempo" class="form-control" />
+                <span asp-validation-for="Tiempo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
