--- a/WebResumen/Views/AudiTrail/Delete.cshtml
+++ b/WebResumen/Views/AudiTrail/Delete.cshtml
@@ -18,6 +18,12 @@
             @Html.DisplayFor(model => model.Usuario)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Tabla)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Tabla)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaHora)
         </dt>
         <dd class = "col-sm-10">
@@ -28,6 +34,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Evento)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Campo)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Campo)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Valor)
@@ -46,6 +58,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Comentario)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Tiempo)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Tiempo)
         </dd>
     </dl>
     
