--- a/WebResumen/Views/AudiTrail/Details.cshtml
+++ b/WebResumen/Views/AudiTrail/Details.cshtml
@@ -17,6 +17,12 @@
             @Html.DisplayFor(model => model.Usuario)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Tabla)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Tabla)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaHora)
         </dt>
         <dd class = "col-sm-10">
@@ -27,6 +33,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Evento)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Campo)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Campo)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Valor)
@@ -45,6 +57,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Comentario)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Tiempo)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Tiempo)
         </dd>
     </dl>
 </div>
