--- a/WebResumen/Views/AutoClaveB/Login.cshtml
+++ b/WebResumen/Views/AutoClaveB/Login.cshtml
@@ -1,10 +1,5 @@
-﻿@model WebResumen.Models.ViewModels.LoginViewModel
+﻿@model WebResumen.Models.ViewModels.DoubleLoginViewModel
 
-
-
-@{
-    Layout = "";
-}
 
 @{
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
@@ -12,18 +7,16 @@
 
 
 @{
-    ViewBag.Title = "Login de Usuario";
+    ViewBag.Title = "Login de Usuario2222";
 
 }
-
-
 
 <div class="container justify-content-center mt-5">
     <h5 class="justify-content-center">Login de Usuario</h5>
     <div class="row">
         <div class="col-md-6">
             <form method="post">
-                @*<div asp-validation-summary="All" class="text-danger"></div>*@
+                <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Usuario"></label>
                     <input asp-for="Usuario" class="form-control" />
@@ -34,10 +27,20 @@
                     <input asp-for="Contraseña" class="form-control" />
                     <span asp-validation-for="Contraseña" class="text-danger"></span>
                 </div>
+                <div class="form-group">
+                    <label asp-for="Comentario"></label>
+                    <input asp-for="Comentario" class="form-control" />
+                    <span asp-validation-for="Comentario" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    
+                    <input asp-for="Dato" class="form-control" value="@ViewBag.datos" type="hidden" />
+
+                </div>
                 <button type="submit" class="btn btn-primary">Login</button>
+
             </form>
         </div>
     </div>
 </div>
-
 
