Se añade viewModel y QueryJoin 3 tabls para inicio, se acomodo autoclaveA par aimprimir y ver y el B en fromato asp net, se eliminan imagenes autoclaves, se modifica angularjs folder, se añade layoutiniccio y boton de volver atras

--- a/WebResumen/Views/AutoClaveA/Index.cshtml
+++ b/WebResumen/Views/AutoClaveA/Index.cshtml
@@ -24,7 +24,7 @@
         El archivo ha sido impreso!
     </div>
 
-    @*<p>The button has been clicked {{count}} times.</p>*@
+  
 
 
     <!-- Modal -->
@@ -81,7 +81,9 @@
                 <td style="width:200px;">
 
                     <button href="#" type="button" data-toggle="modal" data-target="#exampleModal" value="submit" class="btn btn-info" ng-click="vistaPrevia(emp.id)">Ver</button>
-                    <button href="#" type="button" value="submit" class="btn btn-success" ng-click="imprimir(emp.id)">Imprimir</button> |
+                    <button href="#" type="button" value="submit" class="btn btn-success" ng-click="login(emp.id)">Imprimir</button> |
+                    @*<button href="#" type="button" value="submit" class="btn btn-success" ng-click="imprimir(emp.id)">Imprimir</button> |*@
+                   
 
 
                 </td>
