--- a/WebResumen/Views/AutoClaveB/Index.cshtml
+++ b/WebResumen/Views/AutoClaveB/Index.cshtml
@@ -4,9 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
+
 <h1>
     8388B
 </h1>
+
+
+
 
 <p>
     @*<a asp-action="Create">Create New</a>*@
@@ -27,10 +31,13 @@
 
             <input type="submit" value="Buscar" />
         </form>
+
     </p>
 
 
 }
+
+
 <table class="table">
     <thead>
         <tr>
@@ -452,10 +459,13 @@
             <td>
                 @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |*@
                 @*<a asp-action="Details" asp-route-id="@item.Id">Vista Previa</a> |*@
-                <a asp-action="Preview" asp-route-id="@item.Id">Vista Previa</a>
-                <a asp-action="Login" asp-route-id="@item.Id">Print</a> 
+                <a type="button" class="btn btn-info" asp-action="Preview" asp-route-id="@item.Id">Vista</a>
+                 <a type="button" class="btn btn-success" asp-action="Login" asp-route-id="@item.Id">Print</a>
                 @*<a asp-action="Print" asp-route-id="@item.Id">Print</a> |*@
                 @*<a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
+                <!-- Button trigger modal -->
+               
+
             </td>
             </tr>
         }
