--- a/WebResumen/Views/Shared/_LayoutLogin.cshtml
+++ b/WebResumen/Views/Shared/_LayoutLogin.cshtml
@@ -49,7 +49,10 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
-
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="~/AngularJSApp/AutoClaveA/Module.js" asp-append-version="true"></script>
+    <script src="~/AngularJSApp/AutoClaveA/Controller.js" asp-append-version="true"></script>
+    <script src="~/AngularJSApp/AutoClaveA/Service.js" asp-append-version="true"></script>
 
 
     @RenderSection("Scripts", required: false)
